--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # your text below (remove <br /> elements if you don't need line 
   In partial fulfillment of the requirements for the degree of
   Bachelor of Science in Cybersecurity (class of 2025)
   <br /><br />
-  <a href="https://example.com/resume">View My Resume</a>
+  <a href="file:///C:/Users/weddi/OneDrive/Documents/Zachary%20Wedding%20Resume.pdf">View My Resume</a>
   <br /><br />
   <a href="https://www.linkedin.com/in/zachary-wedding-b7004a328/">View My LinkedIn Profile</a>
 repository: "zwedding/zwedding.github.io"
