--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # your text below (remove <br /> elements if you don't need line 
   In partial fulfillment of the requirements for the degree of
   Bachelor of Science in Cybersecurity (class of 2025)
   <br /><br />
-  ### [View My Resume](/pdf/Zachary Wedding Resume.pdf)
+  <a href="/pdf/Zachary%20Wedding%20Resume.pdf">View My Resume</a>
 repository: "zwedding/zwedding.github.io"
 github_username:  zwedding # update with your username
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
